# Javelin-AI_Agent

./: .gitignore  Dockerfile.sandbox  README.md  agents.py  asgi.py  factorial.py  happy.py  json_to_csv.py  logging_decorator.py  max_subarray_sum.py  mcp_github_server.py  mcp_playwright_server.py  primenumbers.py  program.cpp  pyproject.toml  requirements.txt  settings.py  study.py  tui.py  upload_to_s3.py  utils.py  wsgi.py
agents/: __init__.py  agent_messages.py  code_tools.py  control.py  core.py  document_rw_tools.py  document_tools.py  email_tools.py  experience_logger.py  experience_store.py  feedback_tools.py  file_tools.py  github_tools.py  helpers.py  migrate_experiences.py  multimedia_tools.py  travel_tools.py
chat/: models.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/plans/: 2026-02-23-agent-self-recovery-design.md  2026-02-23-agent-self-recovery-plan.md  2026-02-23-methodical-agent-design.md  2026-02-23-methodical-agent-implementation.md  2026-02-23-tui-design.md  2026-02-23-tui-filename-autocomplete-design.md  (+22 more)
evals/: baseline_results.json  compare_phases.py  correction_policy.json  full_results.json  generate_figures.py  metrics.py  mocks.py  results.json  runner.py  static_fewshot.py  tasks.json  transfer_map.json  validators.py
evals/figures/: .gitignore
samples/: simple_shooter.py
tests/: test_eatp_integration.py  test_eatp_manual.py  test_experience_logger.py  test_experience_store.py  test_feedback_tools.py  test_mcp_navigate.py  test_mocks.py  test_normalize_url.py  test_static_fewshot.py  test_validators.py
(+19 files in other folders)
