[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent with TUI and web interfaces"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.50.0",
]

[tool.setuptools]
py-modules = ["tui"]

[project.scripts]
agent = "tui:main"
